--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,8 @@ edition = "2018"
 [dependencies]
 serde = { version = "1.0.101", features = ["derive"] }
 serde_yaml = "0.8.11"
+semver = { version = "0.9.0", features = ["serde"] }
+directories = "2.0.2"
+reqwest = "0.9.22"
+regex = "1.3.1"
+zip = { version = "0.5.3", features = ["deflate"] }
