--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,11 +4,13 @@ version = "0.1.0"
 authors = ["Igor Nikitin <rabbitinspace@icloud.com>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
-serde = { version = "1.0.101", features = ["derive"] }
-serde_yaml = "0.8.11"
+structopt = "0.3.3"
+failure = "0.1.6"
+exitfailure = "0.5.1"
+
+serde = { version = "1.0.102", features = ["derive"] }
+toml = "0.5.5"
 semver = { version = "0.9.0", features = ["serde"] }
 directories = "2.0.2"
 reqwest = "0.9.22"
